--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,14 @@
 
 <body>
   <h1>Hello World</h1>
+  <div id="root">
+    <nav id="main-nav" class="sidebar">
+      <a href="/">Home</a>
+      <a href="/cart">cart</a>
+      <a href="/details">details</a>
+    </nav>
+    <div id="main-page"></div>
+  </div>
 </body>
 
 </html>
