feat: add header elements, create scss files

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,19 @@
 </head>
 
 <body>
-  <h1>Hello World</h1>
+  <section class="page-wrapper">
+    <header class="page-header">
+      <div class="store-logo">Online Store</div>
+      <div class="cart-block">
+        <div class="cart-block__cart-icon">
+          <svg class="cart-icon__svg" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M80 176a16 16 0 00-16 16v216c0 30.24 25.76 56 56 56h272c30.24 0 56-24.51 56-54.75V192a16 16 0 00-16-16zm80 0v-32a96 96 0 0196-96h0a96 96 0 0196 96v32"></path><path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M160 224v16a96 96 0 0096 96h0a96 96 0 0096-96v-16"></path></svg>
+          <span class="cart-icon__count">0</span>
+        </div>
+        <svg class="cart-block__filters-icon" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M80 160h352M80 256h352M80 352h352"></path></svg>
+      </div>
+
+    </header>
+  </section>
 </body>
 
 </html>
