--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,16 @@
 <body>
   <section class="page-wrapper">
     <header class="page-header">
+      <div class="search-block">
+        <input type="search" name="search" placeholder="Search Anything..." class="search-block__input">
+        <svg class="search-block__icon" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke-miterlimit="10" stroke-width="32" d="M221.09 64a157.09 157.09 0 10157.09 157.09A157.1 157.1 0 00221.09 64z"></path><path fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M338.29 338.29L448 448"></path></svg>
+      </div> 
       <div class="store-logo">Online Store</div>
       <div class="cart-block">
+        <div class="cart-block__total-price">Cart total: $ 9999</div>
         <div class="cart-block__cart-icon">
           <svg class="cart-icon__svg" fill="none" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M80 176a16 16 0 00-16 16v216c0 30.24 25.76 56 56 56h272c30.24 0 56-24.51 56-54.75V192a16 16 0 00-16-16zm80 0v-32a96 96 0 0196-96h0a96 96 0 0196 96v32"></path><path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M160 224v16a96 96 0 0096 96h0a96 96 0 0096-96v-16"></path></svg>
-          <div class="cart-icon__count">0</div>
+          <div class="cart-icon__count">99</div>
         </div>
         <svg class="cart-block__filters-icon" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path fill="none" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M80 160h352M80 256h352M80 352h352"></path></svg>
       </div>
