--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <div class="search-block">
         <input type="search" name="search" placeholder="Search Anything..." class="search-block__input">
         <svg class="search-block__icon">
-          <use xlink:href="./assets/svg/sprite.svg#search"></use>
+          <use xlink:href="./assets/svg/search.svg#search"></use>
         </svg>
       </div> 
       <div class="store-logo">Online Store</div>
@@ -21,12 +21,12 @@
         <div class="cart-block__total-price">Cart total: $ 9999</div>
         <div class="cart-block__cart-icon">
           <svg class="cart-icon__svg">
-            <use xlink:href="./assets/svg/sprite.svg#cart"></use>
+            <use xlink:href="./assets/svg/cart.svg#cart"></use>
           </svg>
           <div class="cart-icon__count">99</div>
         </div>
         <svg class="cart-block__filters-icon">
-          <use xlink:href="./assets/svg/sprite.svg#burger"></use>
+          <use xlink:href="./assets/svg/burger.svg#burger"></use>
         </svg>
       </div>
     </header>
@@ -35,13 +35,13 @@
       <div class="gh-anchor-block">
         <a href="https://github.com/EugeneBurkovskiy" class="gh-anchor-block__anchor" target="_blank">
           <svg class="github-icon">
-            <use xlink:href="./assets/svg/sprite.svg#github"></use>
+            <use xlink:href="./assets/svg/github.svg#github"></use>
           </svg>
           E. Burkovskiy
         </a>
         <a href="https://github.com/ordinaraviro" class="gh-anchor-block__anchor" target="_blank">
           <svg class="github-icon">
-            <use xlink:href="./assets/svg/sprite.svg#github"></use>
+            <use xlink:href="./assets/svg/github.svg#github"></use>
           </svg>
           A. Yulin
         </a>
@@ -49,7 +49,7 @@
       <div class="footer-year">© 2022 Online Store</div>
       <a class="footer-rs-anchor" href="https://rs.school/js/" target="_blank">
         <svg class="footer-rs-anchor__icon">
-          <use xlink:href="./assets/svg/sprite.svg#rss"></use>
+          <use xlink:href="./assets/svg/rss.svg#rss"></use>
         </svg>
       </a>
     </footer>
