feat: modify getData function, add mainPage router function

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Online-Store</title>
 </head>
+
 <body>
   <section class="page-wrapper">
     <header class="page-header">
@@ -15,7 +16,7 @@
         <svg class="search-block__icon">
           <use xlink:href="./assets/svg/search.svg#search"></use>
         </svg>
-      </div> 
+      </div>
       <div class="store-logo">Online Store</div>
       <div class="cart-block">
         <div class="cart-block__total-price">Cart total: $ 9999</div>
@@ -36,7 +37,8 @@
         <a href="/cart">cart</a>
         <a href="/details">details</a>
       </nav>
-      <div id="main-page"></div>
+      <article id="main-page">
+      </article>
     </main>
     <footer class="page-footer">
       <div class="gh-anchor-block">
@@ -62,4 +64,5 @@
     </footer>
   </section>
 </body>
+
 </html>
