--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
           <div class="category-block">
             <div class="category-block__title">Brand</div>
             <label class="category-block__item" for="filter-3">
-              <input type="checkbox" class="category-input" id="filter-3">Filter 3
+              <input type="checkbox" class="category-input" id="filter-3">Filter 3 <span>(0/9)</span>
             </label>
             <label class="category-block__item" for="filter-4">
               <input type="checkbox" class="category-input" id="filter-4">Filter 4
@@ -68,16 +68,25 @@
           <div class="filters-block__line"></div>
           <div class="category-block">
             <div class="category-block__title">Price</div>
+            <div class="category-block__properties">
+              <div class="category-block__prop" id="minPriceProp">0</div>
+              <div class="category-block__prop" id="maxPriceProp">100</div>
+            </div>
             <div class="category-block__slider">
-              <input type="range" min="0" max="100">
-              <input type="range" min="0" max="100">
+              <input id="minPrice" type="range" min="0" value="0" max="100">
+              <input id="maxPrice" type="range" min="0" value="100" max="100">
             </div>
           </div>
+          <div class="filters-block__line"></div>
           <div class="category-block">
             <div class="category-block__title">Stock</div>
+            <div class="category-block__properties">
+              <div class="category-block__prop" id="minStockProp">0</div>
+              <div class="category-block__prop" id="maxStockProp">100</div>
+            </div>
             <div class="category-block__slider">
-              <input type="range" min="0" max="100">
-              <input type="range" min="0" max="100">
+              <input id="minStock" type="range" min="0" value="0" max="100">
+              <input id="maxStock" type="range" min="0" value="100" max="100">
             </div>
           </div>
         </div>
