feat: add scroll lock for filters menu

--- a/src/index.html
+++ b/src/index.html
@@ -73,8 +73,8 @@
               <div class="category-block__prop" id="maxPriceProp">100</div>
             </div>
             <div class="category-block__slider">
-              <input id="minPrice" type="range" min="0" value="0" max="100">
-              <input id="maxPrice" type="range" min="0" value="100" max="100">
+              <input class="slider-input" id="minPrice" type="range" min="0" value="0" max="100">
+              <input class="slider-input" id="maxPrice" type="range" min="0" value="100" max="100">
             </div>
           </div>
           <div class="filters-block__line"></div>
@@ -85,8 +85,8 @@
               <div class="category-block__prop" id="maxStockProp">100</div>
             </div>
             <div class="category-block__slider">
-              <input id="minStock" type="range" min="0" value="0" max="100">
-              <input id="maxStock" type="range" min="0" value="100" max="100">
+              <input class="slider-input" id="minStock" type="range" min="0" value="0" max="100">
+              <input class="slider-input" id="maxStock" type="range" min="0" value="100" max="100">
             </div>
           </div>
         </div>
