feat: complete path for store

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
       </div>
     </header>
     <main id="root">
+      <nav id="page-menu">
+        <a href="/">Catalog</a>
+      </nav>
       <article id="main-page">
       </article>
     </main>
