feat: add modal tags

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,27 @@
       </nav>
       <article id="main-page">
       </article>
+      <div class="modal-container">
+        <div class="modal-content">
+          <p class="modal-content__title">Personal details</p>
+          <input type="text" class="modal-content__input" placeholder="Name *">
+          <input type="text" class="modal-content__input" placeholder="Phone number *">
+          <input type="text" class="modal-content__input" placeholder="Delivery address *">
+          <input type="email" class="modal-content__input" placeholder="E-mail *">
+          <p class="modal-content__title">Credit card details</p>
+          <div class="modal-content__credit-block">
+            <div class="credit-block__number-line">
+              <img src="https://i.guim.co.uk/img/media/b73cc57cb1d46ae742efd06b6c58805e8600d482/16_0_2443_1466/master/2443.jpg?width=700&quality=85&auto=format&fit=max&s=fb1dca6cdd4589cd9ef2fc941935de71" alt="visa" class="credit-block__icon">
+              <input type="text" class="modal-content__input modal-content__input_card-number" placeholder="Card number *">
+            </div>
+            <div class="credit-block__info-line">
+              <label for="" class="card-date"><input type="text" class="modal-content__input modal-content__input_card-info" placeholder="Valid Thru *"></label>
+              <label for="" class="card-cvv"><input type="text" class="modal-content__input modal-content__input_card-info" placeholder="CVV *"></label>
+            </div>
+          </div>
+          <button class="modal-content__btn">CONFIRM</button>
+        </div>
+      </div>
     </main>
     <footer class="page-footer">
       <div class="gh-anchor-block">
