--- a/src/index.html
+++ b/src/index.html
@@ -38,25 +38,25 @@
       <article id="main-page">
       </article>
       <div class="modal-container">
-        <div class="modal-content">
+        <form class="modal-content">
           <p class="modal-content__title">Personal details</p>
-          <input type="text" class="modal-content__input" placeholder="Name *">
-          <input type="text" class="modal-content__input" placeholder="Phone number *">
+          <input type="text" class="modal-content__input" id="modalInputName" placeholder="Name *" pattern="\b([A-ZÀ-ÿ][-,a-z. '][-,a-z. ']+[ ]+[A-ZÀ-ÿ][-,a-z. '][-,a-z. ']+([A-ZÀ-ÿ][-,a-z. '][-,a-z. '])*)">
+          <input type="tel" class="modal-content__input" id="modalInputTel" placeholder="Phone number *" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
           <input type="text" class="modal-content__input" placeholder="Delivery address *">
           <input type="email" class="modal-content__input" placeholder="E-mail *">
           <p class="modal-content__title">Credit card details</p>
           <div class="modal-content__credit-block">
             <div class="credit-block__number-line">
               <img src="https://i.guim.co.uk/img/media/b73cc57cb1d46ae742efd06b6c58805e8600d482/16_0_2443_1466/master/2443.jpg?width=700&quality=85&auto=format&fit=max&s=fb1dca6cdd4589cd9ef2fc941935de71" alt="visa" class="credit-block__icon">
-              <input type="text" class="modal-content__input modal-content__input_card-number" placeholder="Card number *">
+              <input type="text" class="modal-content__input modal-content__input_card-number" placeholder="Card number *" pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|[25][1-7][0-9]{14}|6(?:011|5[0-9][0-9])[0-9]{12}|3[47][0-9]{13}|3(?:0[0-5]|[68][0-9])[0-9]{11}|(?:2131|1800|35\d{3})\d{11})$">
             </div>
             <div class="credit-block__info-line">
-              <label for="" class="card-date"><input type="text" class="modal-content__input modal-content__input_card-info" placeholder="Valid Thru *"></label>
-              <label for="" class="card-cvv"><input type="text" class="modal-content__input modal-content__input_card-info" placeholder="CVV *"></label>
+              <label for="" class="card-date"><input type="text" class="modal-content__input modal-content__input_card-info" maxlength="5" placeholder="MM / YY *" pattern="(?:0[1-9]|1[0-2])/[0-9]{2}"></label>
+              <label for="" class="card-cvv"><input type="text" class="modal-content__input modal-content__input_card-info" maxlength="3" placeholder="CVV *" pattern="^\d{1,3}$" max="999"></label>
             </div>
           </div>
-          <button class="modal-content__btn">CONFIRM</button>
-        </div>
+          <input type="submit" class="modal-content__btn" value="CONFIRM">
+        </form>
       </div>
     </main>
     <footer class="page-footer">
