feat: add save filters after push on catalog btn

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     </header>
     <main id="root">
       <nav id="page-menu">
-        <a href="/">Catalog</a>
+        <a href="/" id="catalog-link">Catalog</a><span class="page-menu__path"></span>
       </nav>
       <article id="main-page">
       </article>
