--- a/src/index.html
+++ b/src/index.html
@@ -39,20 +39,24 @@
       </article>
       <div class="modal-container">
         <form class="modal-content">
+          <div class="modal-cross-btn">
+            <div class="modal-cross-btn__line1"></div>
+            <div class="modal-cross-btn__line2"></div>
+          </div>
           <p class="modal-content__title">Personal details</p>
-          <input type="text" class="modal-content__input" id="modalInputName" placeholder="Name *" pattern="\b([A-ZÀ-ÿ][-,a-z. '][-,a-z. ']+[ ]+[A-ZÀ-ÿ][-,a-z. '][-,a-z. ']+([A-ZÀ-ÿ][-,a-z. '][-,a-z. '])*)">
+          <input type="text" class="modal-content__input" id="modalInputName" placeholder="Name *" pattern="(([a-zA-Z]{3,})+\s){1,}(([a-zA-Z]{3,})+)">
           <input type="tel" class="modal-content__input" id="modalInputTel" placeholder="Phone number *" minlength="10" pattern=".{10,}">
-          <input type="text" class="modal-content__input" placeholder="Delivery address *">
-          <input type="email" class="modal-content__input" placeholder="E-mail *">
+          <input type="text" class="modal-content__input" id="modalInputAdress" placeholder="Delivery address *" pattern="(([a-zA-Z]{5,})+\s){2,}(([a-zA-Z]{5,})+)">
+          <input type="email" class="modal-content__input" id="modalInputEmail" placeholder="E-mail *" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
           <p class="modal-content__title">Credit card details</p>
           <div class="modal-content__credit-block">
             <div class="credit-block__number-line">
               <img src="https://i.guim.co.uk/img/media/b73cc57cb1d46ae742efd06b6c58805e8600d482/16_0_2443_1466/master/2443.jpg?width=700&quality=85&auto=format&fit=max&s=fb1dca6cdd4589cd9ef2fc941935de71" alt="visa" class="credit-block__icon">
-              <input type="text" class="modal-content__input modal-content__input_card-number" placeholder="Card number *" pattern="^(?:4[0-9]{12}(?:[0-9]{3})?|[25][1-7][0-9]{14}|6(?:011|5[0-9][0-9])[0-9]{12}|3[47][0-9]{13}|3(?:0[0-5]|[68][0-9])[0-9]{11}|(?:2131|1800|35\d{3})\d{11})$">
+              <input type="text" class="modal-content__input modal-content__input_card-number" id="modalInputCardNum" maxlength="19" placeholder="Card number *">
             </div>
             <div class="credit-block__info-line">
-              <label for="" class="card-date"><input type="text" class="modal-content__input modal-content__input_card-info" maxlength="5" placeholder="MM / YY *" pattern="(?:0[1-9]|1[0-2])/[0-9]{2}"></label>
-              <label for="" class="card-cvv"><input type="text" class="modal-content__input modal-content__input_card-info" maxlength="3" placeholder="CVV *" pattern="^\d{1,3}$" max="999"></label>
+              <label for="" class="card-date"><input type="text" class="modal-content__input modal-content__input_card-info" id="modalCardDate" maxlength="5" placeholder="MM / YY *" pattern="(?:0[1-9]|1[0-2])/[0-9]{2}"></label>
+              <label for="" class="card-cvv"><input type="text" class="modal-content__input modal-content__input_card-info" id="modalInputCvv" maxlength="3" placeholder="CVV *" pattern="^\d{3,3}$"></label>
             </div>
           </div>
           <input type="submit" class="modal-content__btn" value="CONFIRM">
