--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,8 @@
           <p class="modal-content__title">Credit card details</p>
           <div class="modal-content__credit-block">
             <div class="credit-block__number-line">
-              <img src="https://i.guim.co.uk/img/media/b73cc57cb1d46ae742efd06b6c58805e8600d482/16_0_2443_1466/master/2443.jpg?width=700&quality=85&auto=format&fit=max&s=fb1dca6cdd4589cd9ef2fc941935de71" alt="visa" class="credit-block__icon">
-              <input type="text" class="modal-content__input modal-content__input_card-number" id="modalInputCardNum" maxlength="19" placeholder="Card number *">
+              <img src="https://i.guim.co.uk/img/media/b73cc57cb1d46ae742efd06b6c58805e8600d482/16_0_2443_1466/master/2443.jpg?width=700&quality=85&auto=format&fit=max&s=fb1dca6cdd4589cd9ef2fc941935de71" alt="pay-system" class="credit-block__icon">
+              <input type="text" class="modal-content__input modal-content__input_card-number" id="modalInputCardNum" maxlength="19" placeholder="Card number *" pattern="[0-9\s]{19}">
             </div>
             <div class="credit-block__info-line">
               <label for="" class="card-date"><input type="text" class="modal-content__input modal-content__input_card-info" id="modalCardDate" maxlength="5" placeholder="MM / YY *" pattern="(?:0[1-9]|1[0-2])/[0-9]{2}"></label>
