feat: add card icons from assets

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
           <use xlink:href="./assets/svg/burger.svg#burger"></use>
         </svg>
       </div>
-      <div class="modal-container modal-container_hide">
+      <div class="modal-container">
         <form class="modal-content">
           <div class="modal-cross-btn">
             <div class="modal-cross-btn__line1"></div>
@@ -52,7 +52,7 @@
           <p class="modal-content__title">Credit card details</p>
           <div class="modal-content__credit-block">
             <div class="credit-block__number-line">
-              <img src="https://i.guim.co.uk/img/media/b73cc57cb1d46ae742efd06b6c58805e8600d482/16_0_2443_1466/master/2443.jpg?width=700&quality=85&auto=format&fit=max&s=fb1dca6cdd4589cd9ef2fc941935de71" alt="pay-system" class="credit-block__icon">
+              <div class="credit-block__icon"></div>
               <div class="input-wrapper">
                 <input type="text" class="modal-content__input modal-content__input_card-number" id="modalInputCardNum" maxlength="19" placeholder="Card number *" pattern="[0-9\s]{19}"><span class="error-span"></span>
               </div>
