fix: modal className

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
           <use xlink:href="./assets/svg/burger.svg#burger"></use>
         </svg>
       </div>
-      <div class="modal-container">
+      <div class="modal-container modal-container_hide">
         <form class="modal-content">
           <div class="modal-cross-btn">
             <div class="modal-cross-btn__line1"></div>
