feat: add scrollUp

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
           <use xlink:href="./assets/svg/search.svg#search"></use>
         </svg>
       </div>
-      <div class="store-logo">Online Store</div>
+      <div class="store-logo" id="logo">Online Store</div>
       <div class="cart-block">
         <div class="cart-block__total-price">Cart total: $ 0</div>
         <div class="cart-block__cart-icon">
@@ -59,6 +59,7 @@
           <use xlink:href="./assets/svg/rss.svg#rss"></use>
         </svg>
       </a>
+      <a class="page-up" href="#logo">↑</a>
     </footer>
   </section>
 </body>
