feat: add changeCount

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
       </div>
       <div class="store-logo" id="logo">Online Store</div>
       <div class="cart-block">
+        <a class="cart-button" href="/cart"></a>
         <div class="cart-block__total-price">Cart total: $<span id="totalPriceHeader">0</span></div>
         <div class="cart-block__cart-icon">
           <svg class="cart-icon__svg">
@@ -32,56 +33,6 @@
       </div>
     </header>
     <main id="root">
-      <section class="cart">
-        <div class="products-in-cart">
-          <div class="products-in-cart__top-bar">
-            <h2 class="top-bar__title">Products in Cart</h2>
-            <div class="top-bar__control">
-              <label for="cartViewLimit">LIMIT: <input type="number" id="cartViewLimit" value="3" placeholder="3"></label>
-              <div class="cart-page-number">
-                <span>Page:</span>
-                <button class="cart-page-btn"> < </button>
-                <span class="cart-cur-page" id="cartCurPage">1</span>
-                <button class="cart-page-btn"> > </button>
-              </div>
-            </div>
-          </div>
-          <div class="products-in-cart__items">
-            <div class="cart-item">
-              <div class="cart-item__index" id="cartItemIndex">1</div>
-              <div class="cart-item__info">
-                <img src="https://i.dummyjson.com/data/products/1/thumbnail.jpg" alt="gg" class="item-img">
-                <div class="item-details">
-                  <div class="item-title">iPhone 9</div>
-                  <div class="item-line"></div>
-                  <div class="item-description"> An apple mobile which is nothing like apple </div>
-                  <div class="item-other">
-                    <div class="item-rating">Rating: 4.69</div>
-                    <div class="item-discount">Discount: 12.96%</div>
-                  </div>
-                </div>
-              </div>
-              <div class="cart-item__control">
-                <div class="item-stock"> Stock: 94 </div>
-                <div class="item-add-control">
-                  <button class="item-add-btn">+</button>
-                  <span class="item-count">1</span>
-                  <button class="item-add-btn">-</button>
-                </div>
-                <div class="item-amount-price">$<span id="totalPriceItem">9999</span></div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="total-cart">
-          <h2 class="total-title">Summary</h2>
-          <div class="total-products">Products: <span id="totalItems">99</span></div>
-          <div class="total-price">Total: $<span id="totalPriceCart">9999</span></div>
-          <input type="text" class="total-promo" placeholder="Enter promo code">
-          <span class="total-promo-ex">Promo for test: 'RS', 'EPM'</span>
-          <button class="total-buy-btn">BUY NOW</button>
-        </div>
-      </section>
       <nav id="page-menu">
         <a href="/" id="catalog-link">Catalog</a><span class="page-menu__path"></span>
       </nav>
