feat: add modal buy btn func

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
         </svg>
       </div>
       <div class="modal-container modal-container_hide">
+        <div class="modal-close-message modal-container_hide">Thanks for your order. Redirect to the store after a few sec.</div>
         <form class="modal-content">
           <div class="modal-cross-btn">
             <div class="modal-cross-btn__line1"></div>
@@ -67,7 +68,7 @@
               </div>
             </div>
           </div>
-          <input type="submit" class="modal-content__btn" value="CONFIRM">
+          <button class="modal-content__btn">CONFIRM</button>
         </form>
       </div>
     </header>
