feat: update desc version

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,7 @@
           <button class="modal-content__btn">CONFIRM</button>
         </form>
       </div>
+      <div class="filters-bg"></div>
     </header>
     <main id="root">
       <div class="naw-wrapper">
